// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration test: when there are outdated dependencies advanced configuration npm should install all updates, update the package.json and return the results: advanced configuration > npm > installed versions 1`] = `
Object {
  "updtr-test-module-1": "1.1.1",
  "updtr-test-module-2": "2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies advanced configuration npm should install all updates, update the package.json and return the results: advanced configuration > npm > package.json dependencies 1`] = `
Object {
  "updtr-test-module-1": "1.1.1",
  "updtr-test-module-2": "^2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies advanced configuration npm should install all updates, update the package.json and return the results: advanced configuration > npm > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "1.1.1",
  },
]
`;

exports[`integration test: when there are outdated dependencies advanced configuration yarn should install all updates, update the package.json and return the results: advanced configuration > yarn > installed versions 1`] = `
Object {
  "updtr-test-module-1": "1.1.1",
  "updtr-test-module-2": "2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies advanced configuration yarn should install all updates, update the package.json and return the results: advanced configuration > yarn > package.json dependencies 1`] = `
Object {
  "updtr-test-module-1": "^1.1.1",
  "updtr-test-module-2": "2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies advanced configuration yarn should install all updates, update the package.json and return the results: advanced configuration > yarn > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "1.1.1",
  },
]
`;

exports[`integration test: when there are outdated dependencies default configuration npm should install all updates, update the package.json and return the results: default configuration > npm > installed versions 1`] = `
Object {
  "updtr-test-module-1": "2.0.0",
  "updtr-test-module-2": "2.1.1",
}
`;

exports[`integration test: when there are outdated dependencies default configuration npm should install all updates, update the package.json and return the results: default configuration > npm > package.json dependencies 1`] = `
Object {
  "updtr-test-module-1": "^2.0.0",
  "updtr-test-module-2": "^2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies default configuration npm should install all updates, update the package.json and return the results: default configuration > npm > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.1.1",
    "success": true,
    "updateTo": "2.0.0",
  },
]
`;

exports[`integration test: when there are outdated dependencies default configuration yarn should install all updates, update the package.json and return the results: default configuration > yarn > installed versions 1`] = `
Object {
  "updtr-test-module-1": "2.0.0",
  "updtr-test-module-2": "2.1.1",
}
`;

exports[`integration test: when there are outdated dependencies default configuration yarn should install all updates, update the package.json and return the results: default configuration > yarn > package.json dependencies 1`] = `
Object {
  "updtr-test-module-1": "2.0.0",
  "updtr-test-module-2": "^2.0.0",
}
`;

exports[`integration test: when there are outdated dependencies default configuration yarn should install all updates, update the package.json and return the results: default configuration > yarn > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.1.1",
    "success": true,
    "updateTo": "2.0.0",
  },
]
`;
